0.4.2  Nick Burch <gagravarr@users.sourceforge.net>
	* help.h: tweak information on what ^W and ^R do
	* gnupg.c: correct key search logic when more than one key for a given
	    email address exists, where some are expired and one isn't
	* gnupg.c: fix issue with compiling expired key regular expressions on
	    more modern libc's
	* gnupg.c: avoid some compiler warnings 

0.4.1  Nick Burch <gagravarr@users.sourceforge.net>
	* *.c: avoid compiler warnings about implicit declaration of free 
	* ui.c: Turn tabs into spaces (neither xml nor ncurses like tabs much)
	* pwlist.c: Tweak the entry escaping to still work properly when
		heavy compiler optimisations are enabled

0.4.0  Nick Burch <gagravarr@users.sourceforge.net>
	* search.c: new support for case insensitive searching across
	    entries and sublists - use / to search, f for old style filtering
	* gnupg.c: gpg_check_id now reports on expired keys (uses
		--with-colons option to get more details from gpg to spot this)
	* pwman.c: check that the key can be found and hasn't expired during
		startup, warning about the problem in advance
	* uilist.c: change the key of filtering from / to f
	* pwlist.c/uilist.c: support searching for entries via /
	* gnupg.c: if the gnupg call fails and generates a SIGPIPE, make
		some attempt to let the user know what went wrong with it

0.3.9   Nick Burch <gagravarr@users.sourceforge.net>
	* gnupg.c: fix segfault if the secret key isn't present

0.3.8   Nick Burch <gagravarr@users.sourceforge.net>
	* pwlist.c/actions.c: support moving entries and sublists up and down
	  within their parent list, using [ and ]. (You could already move them
	  to parent or child lists)

0.3.7   Nick Burch <gagravarr@users.sourceforge.net>
	* gnupg.c/pwman.c: improved handling of new files, and when you cancel the
	  gnupg passphrase input / key not found

0.3.6   Nick Burch <gagravarr@users.sourceforge.net>
	* uilist.c: fix so we don't have an inifinite loop if no data
